# hcomp24-wip-tamura

./: README.md  ds_plus_onecoin_model.py  human_worker_simulation_model.py  pyproject.toml  sample_ds_plus_onecoin.py
AI_workers/models/: 2class_balanced.pkl  2class_imbalanced.pkl  4class_imbalanced.pkl  8class_balanced.pkl  8class_imbalanced.pkl
AI_workers/responses/: 2class_balanced.csv  2class_imbalanced.csv  4class_balanced.csv  4class_imbalanced.csv  8class_balanced.csv  8class_imbalanced.csv
datasets/: tasks_2classes.csv  tasks_4classes.csv  tasks_8classes.csv
